--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,21 @@
     --universal-gap-half: calc(var(--universal-gap)/2);
 
     --color-primary: #F78065;
-    --card-box-shadow: 0 0 6rem rgba(0, 0, 0, 0.1);
+    --color-primary-dark: #C66750;
+    --black-tint-100: rgba(0, 0, 0, 0.1);
+    --black-tint-200: rgba(0, 0, 0, 0.2);
+    --black-tint-500: rgba(0, 0, 0, 0.5);
+    --card-box-shadow: 0 0 6rem var(--black-tint-100);
+
+}
+
+
+.example {
+    /* Hide scrollbar for IE, Edge and Firefox */
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    /* Firefox */
 }
 
 * {
@@ -17,6 +31,15 @@
 
 body {
     font-family: MontserratRegular, Verdana, Geneva, Tahoma, sans-serif;
+    /* Hide scrollbar for IE, Edge and Firefox */
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+
+    /* Hide scrollbar for Chrome, Safari and Opera */
+    &&::-webkit-scrollbar {
+        display: none;
+    }
 }
 
 main {
@@ -101,7 +124,12 @@ a {
     background-color: var(--color-primary);
     color: white;
     border: none;
-    padding: var(--universal-gap-half) var(--universal-gap-double)
+    padding: var(--universal-gap-half) var(--universal-gap-double);
+    transition: 0.3s background-color;
+    &&:hover{
+        background-color: #C66750;
+        transition: 0.3s all;
+    }
 }
 
 .section-headline {
@@ -140,13 +168,19 @@ a {
 
 .card-copy,
 .section-copy {
-    color: rgba(0, 0, 0, 0.5);
+    color: var(--black-tint-500);
 }
 
 .card-link {
-    color: #F78065;
-    text-decoration: none;
     font-weight: 500;
+    color: var(--color-primary);
+    text-decoration: none;
+    transition: color 0.3s;
+    &&:hover{
+        color: var(--color-primary-dark);
+        padding: 0 4px;
+        transition: all 0.3s;
+    }
 }
 
 .card-link,
@@ -207,6 +241,11 @@ a {
     width: fit-content;
 }
 
+.footer-headline__inline {
+    margin: 0;
+    color: var(--black-tint-500);
+}
+
 .floating-navbar {
     position: fixed;
     height: 3rem;
@@ -221,7 +260,7 @@ a {
     align-items: center;
     padding: 0 var(--universal-gap-half);
     border-radius: 100rem;
-    
+
 }
 
 .icon-button__floating-menu-button,
@@ -230,52 +269,68 @@ a {
     height: var(--universal-gap-double);
     padding: 0 0;
     border-radius: 100rem;
-    box-shadow: 0 0 1rem rgba(0, 0, 0, 0.2)
+    box-shadow: 0 0 1rem var(--black-tint-200);
 }
 
 .floating-navbar-fadein {
     animation: blur-in 2s forwards;
 }
 
-.linklist, .linklist-list{
+.linklist,
+.linklist-list {
     display: flex;
     flex-direction: column;
     gap: var(--universal-gap-double);
 }
 
-.linklist-item{
+.linklist-item {
     list-style: none;
 }
 
-.linklist-item-link{
-    color: rgba(0, 0, 0, 0.5);
+.linklist-item-link {
+    color: var(--black-tint-500);
+    transition: color 0.2s;
+
+    &&:hover {
+        color: var(--color-primary);
+        transition: color 0.3s;
+    }
 }
 
-footer{
+footer {
     background-color: #F7F7F7;
     padding: var(--universal-gap-double) var(--universal-gap-double);
 
 }
 
-.footer-headline__inline{
+.footer-headline__inline {
     font-size: 3rem;
 }
 
-.footer-copy__inline{
+.footer-section__inline {
+    display: flex;
+    flex-direction: column;
+    gap: var(--universal-gap);
+}
+
+.footer-copy__inline {
+    text-decoration-line: overline;
+    text-decoration: overline double 8px var(--color-primary);
     font-size: 1.5rem;
-    color:black;
+    color: black;
     font-weight: 700;
 }
 
-.legal-container{
+.legal-container {
     display: flex;
     justify-content: space-between;
-    border-top: solid 1px rgba(0, 0, 0, 0.2);
+    border-top: solid 1px var(--black-tint-200);
     margin-top: 4rem;
     padding-top: var(--universal-gap-double);
+    gap: var(--universal-gap-half);
 }
 
-.linklist-list__legal{
+.linklist-list__legal {
     display: inline-flex;
     flex-direction: row;
     gap: var(--universal-gap-double);
@@ -289,9 +344,9 @@ footer{
     }
 
     to {
-        background-color: rgba(0, 0, 0, 0.2);
-        box-shadow: 0 0 3rem rgba(0, 0, 0, 0.2);
-        backdrop-filter: blur(8px);
+        background-color: var(--black-tint-100);
+        box-shadow: 0 0 3rem var(--black-tint-200);
+        backdrop-filter: blur(12px);
     }
 }
 
@@ -299,5 +354,13 @@ footer{
     .card {
         box-shadow: var(--card-box-shadow);
         padding: 1rem;
+    }
+
+    .legal-container {
+        flex-direction: column;
+    }
+
+    .linklist-list__legal {
+        gap: var(--universal-gap-half);
     }
 }
