--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,11 @@
     padding: 0;
 }
 
+ /* Hide scrollbar for Chrome, Safari and Opera */
+&&::-webkit-scrollbar {
+    display: none;
+}
+
 body {
     font-family: MontserratRegular, Verdana, Geneva, Tahoma, sans-serif;
     /* Hide scrollbar for IE, Edge and Firefox */
@@ -36,18 +41,17 @@ body {
     /* IE and Edge */
     scrollbar-width: none;
 
-    /* Hide scrollbar for Chrome, Safari and Opera */
-    &&::-webkit-scrollbar {
-        display: none;
-    }
 }
 
-main {
+main:not(.hero) {
     display: flex;
     flex-direction: column;
-    padding: 0 var(--universal-gap-double);
     gap: 6rem;
     padding-bottom: 8rem;
+}
+
+section:not(.hero) {
+    padding: 0 var(--universal-gap-double);
 }
 
 
@@ -55,7 +59,8 @@ main {
     display: flex;
     flex-direction: column;
     max-width: var(--max-width);
-    justify-self: center;
+    justify-items: center;
+    margin: 0 auto;
 }
 
 
@@ -85,9 +90,13 @@ button {
     font-weight: 700;
 }
 
+.floating-navbar-company-name,
 button,
 a {
     cursor: pointer;
+}
+
+a{
     text-decoration: none;
 }
 
@@ -246,6 +255,13 @@ a {
     color: var(--black-tint-500);
 }
 
+.floating-navbar-company-name{
+    font-weight: 700;
+    color: white;
+    text-shadow: 0 0 var(--universal-gap-half) black;
+    font-size: 1.25rem;
+}
+
 .floating-navbar {
     position: fixed;
     height: 3rem;
@@ -344,7 +360,7 @@ footer {
     }
 
     to {
-        background-color: var(--black-tint-100);
+        background-color: var(--black-tint-200);
         box-shadow: 0 0 3rem var(--black-tint-200);
         backdrop-filter: blur(12px);
     }
